package com.uvg.gt.Model;

public enum Climates {
    NORMAL,
    RAIN,
    STORM,
    BLIZZARD
}
